# Rome

./: .gitattributes  Cargo.toml  LICENSE  README.md  fetch_tiles.py
assets/heightmap/: 0x0.heightmap  0x2.heightmap  0x5.heightmap  0x6.heightmap  0x7.heightmap  10x1.heightmap  10x3.heightmap  10x4.heightmap  10x5.heightmap  10x6.heightmap  10x7.heightmap  11x0.heightmap  11x5.heightmap  11x8.heightmap  12x5.heightmap  13x0.heightmap  13x1.heightmap  13x3.heightmap  13x4.heightmap  13x6.heightmap  1x0.heightmap  1x2.heightmap  1x3.heightmap  1x6.heightmap  1x7.heightmap  1x8.heightmap  2x0.heightmap  2x1.heightmap  2x2.heightmap  2x4.heightmap  2x8.heightmap  3x1.heightmap  3x5.heightmap  3x8.heightmap  4x0.heightmap  4x3.heightmap  4x4.heightmap  4x6.heightmap  4x7.heightmap  5x0.heightmap  (+25 more)
assets/map/heightmap/: 0x1.heightmap  0x3.heightmap  0x4.heightmap  0x6.heightmap  0x8.heightmap  10x1.heightmap  10x2.heightmap  10x4.heightmap  10x6.heightmap  10x8.heightmap  11x1.heightmap  11x2.heightmap  11x4.heightmap  11x5.heightmap  11x6.heightmap  11x8.heightmap  12x0.heightmap  12x2.heightmap  12x8.heightmap  13x2.heightmap  13x7.heightmap  1x1.heightmap  1x4.heightmap  1x5.heightmap  1x6.heightmap  1x7.heightmap  2x1.heightmap  2x3.heightmap  2x7.heightmap  3x0.heightmap  3x1.heightmap  3x3.heightmap  3x4.heightmap  4x2.heightmap  4x3.heightmap  4x4.heightmap  4x5.heightmap  5x6.heightmap  5x8.heightmap  6x0.heightmap  (+9 more)
assets/map/shader/: map.frag  map.vert
rome_map/: .gitignore  Cargo.toml  fetch_data.py  preprocess.sh
rome_map/src/: lib.rs  main.rs  osm_water_polygons.rs  terrarium_raster.rs
rome_preprocessing/: Cargo.toml
rome_preprocessing/src/: main.rs
src/: loading.rs  main.rs  map.rs  rts_camera.rs
src/map/: map.frag  map.vert  mesh.rs  mipmap.rs  shader.rs  terrarium_raster.rs
