[package]
name = "rome"
version = "0.1.0"
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.2.1"
image = "0.23"
byteorder = "1.3.4"
xz2 = "0.1"
anyhow = "1.0.32"
regex = "1.3.9"
lazy_static = "1"
