[package]
name = "rome"
version = "0.1.0"
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"

[dependencies]
bevy = "0.4"
byteorder = "1.3.4"
zstd = "0.5.3"
anyhow = "1.0.32"
regex = "1.3.9"
once_cell = "1.4.1"
goshawk = "0.1.0"
rome_map = { path = "rome_map", features = ["preprocess"] }
bincode = "1.3.1"
num_cpus = "1"
itertools = "0.9.0"
rayon = "1.4.1"
ordered-float = "2.0.1"
tinyvec = "1.1.0"

# Compile this with opt level 1
[profile.dev]
opt-level = 2

# Compile all dependencies with opt level 3
[profile.dev.package."*"]
opt-level = 3
