[package]
name = "rome_map"
version = "0.1.0"
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
bitvec = { version = "0.19.2", features = ["serde"] }
bincode = { version = "1", optional = true }
shapefile = { version = "0.2.0", optional = true }
geo = { version = "0.14.2", optional = true }
rayon = { version = "1.4.0", optional = true }
byteorder = { version = "1.3.4", optional = true }
xz2 = { version = "0.1", optional = true }
zstd = { version = "0.5.3", optional = true }
regex = { version = "1.3.9", optional = true }
indicatif = { version = "0.15.0", features = ["rayon"], optional = true }
itertools = { version = "0.9.0", optional = true }
num_cpus = { version = "1", optional = true }

[features]
preprocess = ["shapefile", "geo", "rayon", "byteorder", "xz2", "zstd", "regex", "indicatif", "bincode", "itertools", "num_cpus"]

[lib]
name = "rome_map"
path = "src/lib.rs"

[[bin]]
name = "rome_preprocessor"
path = "src/main.rs"
required-features = ["preprocess"]

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
